# tracewarden

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  detector_gap.md
.github/workflows/: ci.yml  docs.yml  publish.yml
dashboards/: tracewarden-grafana.json
docker/: docker-compose.yaml  otel-collector.yaml  tempo.yaml
docker/grafana/provisioning/dashboards/: tracewarden.yaml
docker/grafana/provisioning/datasources/: tempo.yaml
docs/: alerting.md  backends.md  grafana.md  index.md  quickstart.md  schema.md
docs/adr/: 0001-security-event-schema.md  0002-augment-existing-tracer-provider.md  0003-adapter-strategy.md  index.md
docs/detectors/: catalog.md  llm.md  tuning.md
examples/: seeded_run.py
src/tracewarden/: __init__.py  _bootstrap.py  _hooks.py  alerting.py  config.py  export.py  manual.py  pipeline.py  schema.py
src/tracewarden/detectors/: __init__.py  _text.py  base.py  cost_loop.py  llm.py  memory_poisoning.py  pii.py  prompt_injection.py  scope.py  secrets.py  sequence.py  tool_poisoning.py
src/tracewarden/instrumentation/: __init__.py  _util.py  anthropic_sdk.py  langchain.py  llamaindex.py  mcp_client.py  openai_sdk.py  pydantic_ai.py
tests/: conftest.py  test_alerting.py  test_detectors_injection_poisoning.py  test_detectors_llm.py  test_detectors_scope_memory.py  test_detectors_secrets_pii.py  test_detectors_sequence_cost.py  test_export.py  test_install.py  test_instrumentation_anthropic.py  test_instrumentation_langchain.py  test_instrumentation_llamaindex.py  test_instrumentation_mcp.py  test_instrumentation_openai.py  test_instrumentation_pydantic_ai.py  test_instrumentation_registry.py  test_manual.py  test_package.py  test_pipeline.py  test_schema.py  test_seeded_example.py
tests/fixtures/: __init__.py  samples.py
