[project]
name = "tracewarden"
version = "0.1.0"
description = "Security-event trace layer for AI agents, built on OpenTelemetry"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Tom Price", email = "tomprice13@pm.me" }]
requires-python = ">=3.12"
keywords = ["security", "opentelemetry", "llm", "agents", "observability", "prompt-injection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=2.7",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
langchain = ["langchain-core>=0.2"]
llamaindex = ["llama-index-core>=0.11"]
pydantic-ai = ["pydantic-ai-slim>=0.3"]
mcp = ["mcp>=1.0"]
all = [
    "openai>=1.40",
    "anthropic>=0.34",
    "langchain-core>=0.2",
    "llama-index-core>=0.11",
    "pydantic-ai-slim>=0.3",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/Lonkins/tracewarden"
Repository = "https://github.com/Lonkins/tracewarden"
Issues = "https://github.com/Lonkins/tracewarden/issues"

[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "httpx>=0.28.1",
    "anyio>=4.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracewarden"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "SIM", "RUF"]
ignore = ["S101"]  # asserts are fine in tests; src is covered by bandit-style S rules otherwise

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S107"]  # synthetic secrets in fixtures

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["tracewarden"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=tracewarden --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/tracewarden"]
